# apps/server/src/modules/account/commands/register-account-command.ts
@@ -23,8 +23,9 @@
  *
  */
 
-import { ApiProperty }    from '@nestjs/swagger'
-import { AccountFixture } from '../../../utilities/fixtures/account-fixture.js'
+import { ApiProperty }                from '@nestjs/swagger'
+import { AccountFixture }             from '../../../utilities/fixtures/account-fixture.js'
+import { ApiPropertyAccountUsername } from '../value-objects/username.js'
 
 
 
@@ -65,11 +66,6 @@ export class RegisterAccountCommand
 	  * Represents a username.
 	  * @typedef {string} username
 	  */
-	 @ApiProperty( {
-						  name        : 'username',
-						  description : 'The domain\'s username',
-						  example     : AccountFixture.username,
-						  examples    : AccountFixture._examples.usernames,
-						} ) username : string
+	 @ApiPropertyAccountUsername username : string
   }
 
