# apps/server/src/modules/account/view-model/account-view-model.ts
@@ -23,10 +23,11 @@
  *
  */
 
-import { faker }          from '@faker-js/faker'
-import { ApiProperty }    from '@nestjs/swagger'
-import { ApiModel }       from '../../../utilities/docs-utils/swagger-api-model.js'
-import { AccountFixture } from '../../../utilities/fixtures/account-fixture.js'
+import { faker }                      from '@faker-js/faker'
+import { ApiProperty }                from '@nestjs/swagger'
+import { ApiModel }                   from '../../../utilities/docs-utils/swagger-api-model.js'
+import { AccountFixture }             from '../../../utilities/fixtures/account-fixture.js'
+import { ApiPropertyAccountUsername } from '../value-objects/username.js'
 
 
 
@@ -74,10 +75,5 @@ export class AccountViewModel
 	  * Represents a username.
 	  * @typedef {string} username
 	  */
-	 @ApiProperty( {
-						  name        : 'username',
-						  description : 'The domain\'s username',
-						  example     : AccountFixture.username,
-						  examples    : AccountFixture._examples.usernames,
-						} ) username : string
+	 @ApiPropertyAccountUsername username : string
   }
