# apps/server/src/modules/authentication/commands/authenticate.ts
@@ -1,7 +1,8 @@
-import { faker }          from '@faker-js/faker'
-import { ApiProperty }    from '@nestjs/swagger'
-import { ApiModel }       from '../../../utilities/docs-utils/swagger-api-model.js'
-import { AccountFixture } from '../../../utilities/fixtures/account-fixture.js'
+import { faker }                      from '@faker-js/faker'
+import { ApiProperty }                from '@nestjs/swagger'
+import { ApiModel }                   from '../../../utilities/docs-utils/swagger-api-model.js'
+import { AccountFixture }             from '../../../utilities/fixtures/account-fixture.js'
+import { ApiPropertyAccountUsername } from '../../account/value-objects/username.js'
 
 
 
@@ -15,14 +16,7 @@ export class Authenticate
 	  * Represents a username.
 	  * @typedef {string} username
 	  */
-	 @ApiProperty( {
-						  name        : 'username',
-						  description : 'The domain\'s username',
-						  example     : AccountFixture.username,
-						  examples    : [
-							 faker.internet.userName(), faker.internet.userName(), faker.internet.userName(),
-						  ],
-						} ) username : string
+	 @ApiPropertyAccountUsername username : string
 
 	 /**
 	  * The password variable is a string that represents a user's password.
@@ -31,7 +25,7 @@ export class Authenticate
 	  */
 	 @ApiProperty( {
 						  name        : 'password',
-						  description : 'The domain\'s password',
+						  description : 'The account\'s password',
 						  example     : AccountFixture.password,
 						  examples    : [
 							 faker.internet.password(), faker.internet.password(), faker.internet.password(),
